--- a/challenges/web-frontend/caronsale/libs/ui/src/lib/menu-bar/menu-bar.component.html
+++ b/challenges/web-frontend/caronsale/libs/ui/src/lib/menu-bar/menu-bar.component.html
@@ -1,1 +1,6 @@
-<p>menu-bar works!</p>
+<mat-toolbar color="primary">
+  <button (click)="openLoginDialog()" mat-icon-button>
+    <mat-icon>account_circle</mat-icon>
+    <span>LOGIN</span>
+  </button>
+</mat-toolbar>
