add routes, guards for module buyer
remove main and home components

--- a/challenges/web-frontend/caronsale/apps/car-on-sale/src/app/app.component.html
+++ b/challenges/web-frontend/caronsale/apps/car-on-sale/src/app/app.component.html
@@ -1,2 +1,2 @@
-<caronsale-menu-bar></caronsale-menu-bar>
+<caronsale-menu-bar [navTarget]="navLinks"></caronsale-menu-bar>
 <router-outlet></router-outlet>
