--- a/challenges/web-frontend/caronsale/libs/ui/src/lib/menu-bar/menu-bar.component.html
+++ b/challenges/web-frontend/caronsale/libs/ui/src/lib/menu-bar/menu-bar.component.html
@@ -1,6 +1,14 @@
 <mat-toolbar color="primary">
-  <button (click)="openLoginDialog()" mat-icon-button>
+  <button
+    (click)="openLoginDialog()"
+    *ngIf="!(authenticated$ | async)"
+    mat-icon-button
+  >
     <mat-icon>account_circle</mat-icon>
     <span>LOGIN</span>
+  </button>
+  <button (click)="logOut()" *ngIf="(authenticated$ | async)" mat-icon-button>
+    <mat-icon>account_circle</mat-icon>
+    <span>LOGOUT </span>
   </button>
 </mat-toolbar>
