--- a/challenges/web-frontend/caronsale/libs/ui/src/lib/auction-card/auction-card.component.html
+++ b/challenges/web-frontend/caronsale/libs/ui/src/lib/auction-card/auction-card.component.html
@@ -1,14 +1,18 @@
 <mat-grid-list [cols]="cols | async" gutterSize="8px" rowHeight="350px">
-  <mat-grid-tile *ngFor="let auction of auctions" class="grid-tile">
-    <mat-card class="auction-card mat-elevation-z2" mat-accent>
+  <mat-grid-tile *ngFor="let auction of auctions">
+    <mat-card class="auction-card mat-elevation-z2">
       <mat-card-header>
         <mat-card-title>{{ auction.id }}</mat-card-title>
       </mat-card-header>
       <div class="image-container">
+        <div
+          [style.background-image]="'url(' + auction.imageUrl + ')'"
+          class="image-background"
+        ></div>
         <img
           [src-fallback]="imagePlaceholder"
           [src]="auction.imageUrl"
-          class="card-image"
+          class="auction-image"
         />
       </div>
       <mat-card-content>
