--- a/challenges/web-frontend/caronsale/libs/ui/src/lib/auction-card/auction-card.component.styl
+++ b/challenges/web-frontend/caronsale/libs/ui/src/lib/auction-card/auction-card.component.styl
@@ -1,26 +1,32 @@
 $image-height = 146px
 
-:host
-  display block
-  padding 48px
-
-.grid-tile
-  // width 340px
-
 .auction-card
-  // margin 6px 4px
   width 100%
   height 80%
-  // background-color #eff
 
 .image-container
-  background-color #ddd
   height $image-height
-  margin-bottom 12px
-  // overflow hidden
-  // position relative
-  // display flex
-  // align-items center
+  background-color #fff
+  position relative
+  overflow: hidden
+  margin 0
+  text-align left
 
-.card-image
-  max-height $image-height
+.image-background
+  height $image-height * 3
+  position absolute
+  width 100%
+  background-size cover
+  filter blur(10px)
+  background filter(blur(5px))
+  background-position center
+  background-repeat no-repeat
+
+.auction-image
+  height $image-height
+  display block
+  margin-left auto
+  margin-right auto
+  max-width 100%
+  min-width 200px
+  filter blur(0px)
