--- a/challenges/web-frontend/caronsale/libs/ui/src/lib/auction-card/auction-card.component.html
+++ b/challenges/web-frontend/caronsale/libs/ui/src/lib/auction-card/auction-card.component.html
@@ -1,50 +1,56 @@
-<mat-card class="auction-card mat-elevation-z2">
-  <mat-card-header>
-    <mat-card-title>{{ auction.label }}</mat-card-title>
-  </mat-card-header>
-  <div class="image-container">
-    <div
-      [style.background-image]="'url(' + auction.imageUrl + ')'"
-      class="image-background"
-    ></div>
-    <img
-      [src-fallback]="imagePlaceholder"
-      [src]="auction.imageUrl"
-      class="auction-image"
-    />
-  </div>
-  <mat-card-content>
-    <mat-grid-list cols="2" gutterSize="1px" rowHeight="30px" rows="2">
-      <mat-grid-tile>
-        <p>Milage: {{ auction.vehicleData.mileageInKm }}</p></mat-grid-tile
-      >
-      <mat-grid-tile
-        ><p>Registration: {{ auction.vehicleData.ez }}</p></mat-grid-tile
-      >
-      <mat-grid-tile
-        ><p>
-          Fuel:
-          {{ auction.vehicleData.fuelTypeText }}
-        </p></mat-grid-tile
-      >
-      <mat-grid-tile
-        ><p>
-          Transmission:
-          {{ auction.vehicleData.transmissionText }}
-        </p></mat-grid-tile
-      >
-    </mat-grid-list>
-    <p>
-      HighestB:
-      {{ auction.amIHighestBidder }}
-    </p>
-    <p>
-      Bid:
-      {{ auction.currentHighestBidValue }}
-    </p>
-    <p>
-      Action ends in:
-      {{ auction.timeLeft$ | async }}
-    </p>
-  </mat-card-content>
-</mat-card>
+<mat-grid-list [cols]="cols | async" gutterSize="8px" rowHeight="450px">
+  <mat-grid-tile *ngFor="let auction of auctions">
+    <mat-card class="auction-card mat-elevation-z2">
+      <mat-card-header>
+        <mat-card-title class="line-clamp">{{ auction.label }}</mat-card-title>
+      </mat-card-header>
+      <div class="image-container">
+        <div
+          [style.background-image]="'url(' + auction.imageUrl + ')'"
+          class="image-background"
+        ></div>
+        <img
+          [src-fallback]="imagePlaceholder"
+          [src]="auction.imageUrl"
+          class="auction-image"
+        />
+      </div>
+      <mat-card-content>
+        <mat-grid-list cols="2" gutterSize="1px" rowHeight="30px" rows="2">
+          <mat-grid-tile>
+            <p>Milage: {{ auction.vehicleData.mileageInKm }}</p></mat-grid-tile
+          >
+          <mat-grid-tile
+            ><p>Registration: {{ auction.vehicleData.ez }}</p></mat-grid-tile
+          >
+          <mat-grid-tile
+            ><p>
+              Fuel:
+              {{ auction.vehicleData.fuelTypeText }}
+            </p></mat-grid-tile
+          >
+          <mat-grid-tile
+            ><p>
+              Transmission:
+              {{ auction.vehicleData.transmissionText }}
+            </p></mat-grid-tile
+          >
+        </mat-grid-list>
+        <p *ngIf="!!auction.amIHighestBidder" class="mat-h5 green-color">
+          You are the highest bidder!
+        </p>
+        <p *ngIf="!auction.amIHighestBidder" class="mat-h5 red-color">
+          Raise your bid!
+        </p>
+        <p>
+          Bid:
+          {{ auction.currentHighestBidValueString }}€
+        </p>
+        <p>
+          Auction ends in:
+          {{ auction.timeLeft$ | async }}
+        </p>
+      </mat-card-content>
+    </mat-card>
+  </mat-grid-tile>
+</mat-grid-list>
