--- a/challenges/web-frontend/caronsale/libs/ui/src/lib/buyer-overview/buyer-overview.component.html
+++ b/challenges/web-frontend/caronsale/libs/ui/src/lib/buyer-overview/buyer-overview.component.html
@@ -1,5 +1,5 @@
-<mat-grid-list [cols]="cols | async" gutterSize="8px" rowHeight="400px">
-  <mat-grid-tile *ngFor="let auction of (auctions$ | async)">
-    <caronsale-auction-card [auction]="auction"></caronsale-auction-card>
-  </mat-grid-tile>
-</mat-grid-list>
+<!-- <mat-grid-list [cols]="cols | async" gutterSize="8px" rowHeight="450px">
+  <mat-grid-tile *ngFor="let auction of (auctions$ | async)"> -->
+<caronsale-auction-card [auctions]="auctions$ | async"></caronsale-auction-card>
+<!-- </mat-grid-tile>
+</mat-grid-list> -->
