add thousands separators text

--- a/challenges/web-frontend/caronsale/libs/ui/src/lib/auction-card/auction-card.component.html
+++ b/challenges/web-frontend/caronsale/libs/ui/src/lib/auction-card/auction-card.component.html
@@ -18,7 +18,7 @@
       <mat-card-content>
         <mat-grid-list cols="2" gutterSize="1px" rowHeight="30px" rows="2">
           <mat-grid-tile>
-            <p>Milage: {{ auction.vehicleData.mileageInKm }}</p></mat-grid-tile
+            <p>Milage: {{ auction.milageInKmText }} Km</p></mat-grid-tile
           >
           <mat-grid-tile
             ><p>Registration: {{ auction.vehicleData.ez }}</p></mat-grid-tile
